--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <div class="text-center">
         <button type="button" class="btn btn-primary"><a href="./main.html"class="text-white text-decoration-none">Press to scan </a></button>
     </div>
-
+    <div class="text-center">
+        <div id="show" style="display: none;">
+            <h4>Scanned Result</h4>
+            <p style="color: blue;" id="result"></p>
+        </div>
+    </div>
+<script src="./path.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
