--- a/main.html
+++ b/main.html
@@ -11,6 +11,10 @@
     <div style="text-align: center;">
 
         <div id="reader" style="width: 500px;"></div>
+        <div id="show" style="display: none;">
+            <h4>Scanned Result</h4>
+            <p style="color: blue;" id="result"></p>
+        </div>
     </div>
     <script src="./path.js"></script>
     
