--- a/main.html
+++ b/main.html
@@ -16,7 +16,18 @@
             <p style="color: blue;" id="result"></p>
         </div>
     </div>
-    <script src="./path.js"></script>
+    <script>
+        const html5Qrcode = new Html5Qrcode('reader');
+const qrCodeSuccessCallback = (decodedText, decodedResult)=>{
+    if(decodedText){
+        document.getElementById('show').style.display = 'block';
+        document.getElementById('result').textContent = decodedText;
+        html5Qrcode.stop();
+    }
+}
+const config = {fps:10, qrbox:{width:250, height:250}}
+html5Qrcode.start({facingMode:"environment"}, config,qrCodeSuccessCallback );
+    </script>
     
 </body>
 </html>
