--- a/index.html
+++ b/index.html
@@ -9,11 +9,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
-
 <body>
+    <script src="./path.js"></script>
     <h1 class="text-center">Scan Code to Access Code</h1>
     <div class="text-center">
         <button type="button" class="btn btn-primary"><a href="./main.html"class="text-white text-decoration-none">Press to scan </a></button>
+    </div>
+    <div class="text-center">
+        <div id="show" style="display: none;">
+            <h4>Scanned Result</h4>
+            <p style="color: blue;" id="result"></p>
+        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
