--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
     <div style="text-align: center">
         <div id="reader" style="width: 500px"></div>
     </div>
+    <script src="./qrScript.js"></script>
     <script src="./path.js"></script>
 </body>
 </html>
