--- a/index.html
+++ b/index.html
@@ -12,14 +12,8 @@
 <body>
     <script src="./path.js"></script>
     <h1 class="text-center">Scan Code to Access Code</h1>
-    <div class="text-center">
+    <div class="text-center mt-5">
         <button type="button" class="btn btn-primary"><a href="./main.html"class="text-white text-decoration-none">Press to scan </a></button>
-    </div>
-    <div class="text-center">
-        <div id="show" style="display: none;">
-            <h4>Scanned Result</h4>
-            <p style="color: blue;" id="result"></p>
-        </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
