--- a/main.html
+++ b/main.html
@@ -5,12 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SCANNER APP</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    <div style="text-align: center">
-        <div id="reader" style="width: 500px"></div>
-    </div>
     <script src="./qrScript.js"></script>
-    <script src="./path.js"></script>
+    <div style="text-align: center;">
+
+        <div id="reader" style="width: 500px;"></div>
+        <div id="show" style="display: none;">
+            <h4>Scanned Result</h4>
+            <p style="color: blue;" id="result"></p>
+            <div class="text-center">
+                <button type="button" class="btn btn-primary"><a href="./main.html"class="text-white text-decoration-none">Press to scan </a></button>
+            </div>
+        </div>
+    </div>
+    <script>
+        const html5Qrcode = new Html5Qrcode('reader');
+const qrCodeSuccessCallback = (decodedText, decodedResult)=>{
+    if(decodedText){
+        document.getElementById('show').style.display = 'block';
+        document.getElementById('result').textContent = decodedText;
+        html5Qrcode.stop();
+    }
+}
+const config = {fps:10, qrbox:{width:250, height:250}}
+html5Qrcode.start({facingMode:"environment"}, config,qrCodeSuccessCallback );
+    </script>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
