--- a/main.html
+++ b/main.html
@@ -14,22 +14,33 @@
     <script src="./qrScript.js"></script>
     <div style="text-align: center;">
 
-        <div id="reader" style="width: 500px;"></div>
-        <div id="show" style="display: none;">
+        <div id="reader" style="width: 500px"></div>
+        <div id="show" style="display: none">
             <h4>Scanned Result</h4>
             <p style="color: blue;" id="result"></p>
             <div class="text-center">
                 <button type="button" class="btn btn-primary"><a href="./main.html"
-                        class="text-white text-decoration-none">Press to scan </a></button>
+                        class="text-white text-decoration-none">Save and Next</a></button>
+                <button type="button" class="btn btn-primary"><a href="./main.html"
+                        class="text-white text-decoration-none"> Next </a></button>
             </div>
+            <label>File Name</label>
+            <input type="text" id="filename" value="Report.txt" />
+            <br /><br />
+            <label>File Content</label>
+            <textarea id="text-val"></textarea>
+            <br /><br />
+            <button type="button" id="download-btn">Download File</button>
         </div>
     </div>
+    <script src="./path.js"></script>
     <script>
         const html5Qrcode = new Html5Qrcode('reader');
         const qrCodeSuccessCallback = (decodedText, decodedResult) => {
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
+                document.getElementById('text-val').textContent = decodedText;
                 html5Qrcode.stop();
             }
         }
