--- a/main.html
+++ b/main.html
@@ -62,8 +62,7 @@
         // Start file download.
         document.getElementById("download-btn").addEventListener("click", function () {
             // Generate download of hello.txt file with some content
-            var text = document.getElementById("text-val").value;
-            text = "\n";
+            var text = document.getElementById("text-val").value = text+"\n";
             var filename = "Report.txt";
 
             download(filename, text);
