--- a/main.html
+++ b/main.html
@@ -51,8 +51,9 @@
         function save(){
             let text = document.getElementById('text-val').value;
             text = text+"\n";
-            text.close();
         }
+        
+        window.location.reload(true);
         function download(filename, text) {
             var element = document.createElement('a');
             element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
