--- a/main.html
+++ b/main.html
@@ -35,12 +35,13 @@
         </div>
     </div>
     <script>
+        let savedcontent = document.getElementById('text-val').value;
         const html5Qrcode = new Html5Qrcode('reader');
         const qrCodeSuccessCallback = (decodedText, decodedResult) => {
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
-                document.getElementById('text-val').value = decodedText;
+                document.getElementById('text-val').textContent = decodedText;
                 html5Qrcode.stop();
             }
         }
@@ -50,8 +51,8 @@
 
         function save(){
             let text = document.getElementById('text-val').value;
-            text = text+"\n";
-            text.close();
+            text = savedcontent+"\n"+text;
+            text=text.close();
             window.location.reload(true);
         }
         function download(filename, text) {
