--- a/main.html
+++ b/main.html
@@ -35,13 +35,14 @@
         </div>
     </div>
     <script>
-        let savedcontent = document.getElementById('text-val').value;
         const html5Qrcode = new Html5Qrcode('reader');
         const qrCodeSuccessCallback = (decodedText, decodedResult) => {
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
-                document.getElementById('text-val').textContent = decodedText;
+                document.getElementById('text-val').append = decodedText;
+                let txt = document.getElementById('text-val').value;
+                txt=txt+"\n";
                 html5Qrcode.stop();
             }
         }
@@ -51,7 +52,6 @@
 
         function save(){
             let text = document.getElementById('text-val').value;
-            text = savedcontent+"\n"+text;
             text=text.close();
             window.location.reload(true);
         }
