--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
-<body>
+<body onload="get()">
     <script src="./qrScript.js"></script>
     <div style="text-align: center;">
 
@@ -18,8 +18,8 @@
         <div id="show" style="display: none">
             <h4>Scanned Result</h4>
             <p style="color: blue;" id="result"></p>
-            <div class="text-center">
-                <button type="button" class="btn btn-primary"><a href="./main.html"
+            <div class="text-center my-5">
+                <button type="button" class="btn btn-primary" onclick="save()"><a href="./main.html"
                         class="text-white text-decoration-none">Save and Next</a></button>
                         <!-- <br/>
                 <button type="button" class="btn btn-secondary"><a href="./main.html"   
@@ -47,6 +47,16 @@
         const config = { fps: 10, qrbox: { width: 250, height: 250 } }
         html5Qrcode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback);
 
+        var storedItem = localStorage.getItem("storedItem");
+        function save(){
+            var Item = document.getElementById('text-val').value;
+            localStorage.setItem("storedItem",Item);
+            document.getElementById('text-val').innerHTML = Item + "\n";
+        }
+        function get(){
+            localStorage.getItem("storedItem");
+            document.getElementById('text-val').innerHTML = Item + "\n";
+        }
         function download(filename, text) {
             var element = document.createElement('a');
             element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(text));
