--- a/main.html
+++ b/main.html
@@ -19,11 +19,10 @@
             <h4>Scanned Result</h4>
             <p style="color: blue;" id="result"></p>
             <div class="text-center my-5">
-                <button type="button" class="btn btn-primary" onclick="save()"><a href="./main.html"
+                <button type="button" class="btn btn-primary" ><a href="./main.html"
                         class="text-white text-decoration-none">Save and Next</a></button>
-                        <!-- <br/>
-                <button type="button" class="btn btn-secondary"><a href="./main.html"   
-                        class="text-white text-decoration-none"> Next </a></button> -->
+                        <br/>
+                <button type="button" class="btn btn-secondary" onclick="save()">Save</button>
             </div>
             <label>File Name</label>
             <input type="text" id="filename" value="Report.txt" />
