--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
                 <button type="button" class="btn btn-primary" ><a href="./main.html"
                         class="text-white text-decoration-none">Save and Next</a></button>
                         <br/>
-                <button type="button" class="btn btn-secondary" onclick="save()">Save</button>
+                <button type="button" class="btn btn-secondary" onclick="save()">Save Only</button>
             </div>
             <label>File Name</label>
             <input type="text" id="filename" value="Report.txt" />
