--- a/main.html
+++ b/main.html
@@ -19,7 +19,7 @@
             <h4>Scanned Result</h4>
             <p style="color: blue;" id="result"></p>
             <div class="text-center my-5">
-                <button type="button" class="btn btn-primary" >Save and Next</button>
+                <button type="button" class="btn btn-primary" onclick="save()">Save and Next</button>
                         <!-- <br/>
                 <button type="button" class="btn btn-secondary" onclick="save()">Save Only</button> -->
             </div>
