--- a/main.html
+++ b/main.html
@@ -38,7 +38,7 @@
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
-                document.getElementById('text-val').innerHTML = decodedText + "\n";
+                document.getElementById('text-val').innerHTML = decodedText + "**";
                 html5Qrcode.stop();
             }
         }
@@ -53,7 +53,7 @@
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
-                document.getElementById('text-val').innerHTML = decodedText + "\n";
+                document.getElementById('text-val').innerHTML = decodedText + "**";
                 html5Qrcode.stop();
             }
         }
