--- a/main.html
+++ b/main.html
@@ -33,12 +33,14 @@
         </div>
     </div>
     <script>
+        var copytext;
         const html5Qrcode = new Html5Qrcode('reader');
         const qrCodeSuccessCallback = (decodedText, decodedResult) => {
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
                 document.getElementById('text-val').innerHTML = decodedText + "**";
+                copytext = document.getElementById('text-val').value;
                 html5Qrcode.stop();
             }
         }
@@ -53,7 +55,7 @@
             if (decodedText) {
                 document.getElementById('show').style.display = 'block';
                 document.getElementById('result').textContent = decodedText;
-                document.getElementById('text-val').innerHTML = decodedText + "**";
+                document.getElementById('text-val').innerHTML = copytext + decodedText + "**";
                 html5Qrcode.stop();
             }
         }
