--- a/main.html
+++ b/main.html
@@ -83,7 +83,7 @@
         document.getElementById("download-btn").addEventListener("click", function () {
             // Generate download of hello.txt file with some content
             var text = document.getElementById("text-val").value;
-            var filename = "Report.xlsx";
+            var filename = "Report.txt";
 
             download(filename, text);
         }, false);
